--- a/css/common.css
+++ b/css/common.css
@@ -23,10 +23,10 @@ body {
 
 .sun {
   position: fixed;
-  top: -150px;
-  right: -250px;
+  top: 20px;
+  right: 0;
   z-index: -100;
-  width: 600px;
+  width: 200px;
   opacity: 0.5;
 }
 
